# mcp_server_tesseract

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  start.ps1  start.sh
src/mcp_server_tesseract/: __init__.py  server.py  test.py
